--- a/homework-2/css/style.css
+++ b/homework-2/css/style.css
@@ -9,17 +9,23 @@ header{
     background-color:#d3d3d3;
 }
 
-nav img{
-    top: 20px;
-    position: relative;
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
 }
 
-ul{
+nav img{
+    width: 10%;
+}
+
+nav ul{
     color: white;
     list-style-type: none;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-around;
+    width: 100%;
 }
 
 a:visited{
@@ -43,6 +49,7 @@ h1{
     text-align: center;
     color: #000;
     padding-bottom: 10px;
+    text-wrap: wrap;
 }
 
 .grid-container{
